--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -8,7 +8,7 @@
   <body>
     <center>
     <h1 id="title"> El maliki </h1>
-    <h1 id = "title"><i>SALAHEDDINE</h1></I>
+    <h1 id = "title"><i>SALAHEDDINE el maliki</h1></I>
     <p><h1 id="title">Technicien spécialisé en automatisation et instrumentation indistruel</h1></p>
   </center>
   <</div>
