--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <style> 
         body{background-color: aquamarine;}
         #title{
-          background-color:crimson;
+          background-color:rgb(20, 220, 90);
           box-shadow:10px 10px 10px #8c8c8c;
       
         }
