--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
       <link rel="stylesheet" href="style.css">
     <title>Portefolio SaLaH </title>
   </head>
@@ -15,6 +15,10 @@
         <a href="#Services">Services</a>
          <a href="#Projets">Projets</a>
          <a href="#Contact">Contact</a>
- </nav>
- </header>
+
+        
+      </nav>
+        </header>
+     </body>
+     </html>
       
