--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
   <body>
     <header>
       <a href="a" class="logo"> EL MALIKI SALAHEDDINE</a>
-      <nav class="navigation">
+      <dev class="navigation">
         <a href="#Services">Services</a>
          <a href="#Projets">Projets</a>
          <a href="#Contact">Contact</a>
-
-        
-      </nav>
+        </dev>
         </header>
      </body>
      </html>
