--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   </head>
   <body>
     <header>
-      <a href="a" class="logo"> EL MALIKI SALAHEDDINE</a>
+      <a href="a" class="logo"> el maliki salaheddine</a>
       <dev class="navigation">
-        <a href="#Services">Services</a>
-         <a href="#Projets">Projets</a>
-         <a href="#Contact">Contact</a>
+        <a href="#services">services</a>
+         <a href="#projets">projets</a>
+         <a href="#contact">contact</a>
         </dev>
         </header>
      </body>
