--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
   </head>
   <body>
     <header>
-      <lang>
       <a href="a" class="lang"> el maliki salaheddine </a>
-      <dev class="navigation">
-        <a href="#services">services</a>
+      <nav class="navigation">
+         <a href="#services">services</a>
          <a href="#projets">projets</a>
          <a href="#contact">contact</a> 
-        </lang>
-        </dev>
-       </header>
-     </body>
-     </html>
+      </nav>
+    </header>
+
+  </body>
+  </html>
       
