--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <a href="a" class="lang"> el maliki salaheddine </a>
+      <a href="a" class="log"> el maliki salaheddine </a>
       <nav class="navigation">
          <a href="#services">services</a>
          <a href="#projets">projets</a>
