--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
          <a href="#contact">contact</a> 
       </nav>
     </header>
+    <section class="main">
+      <div>
+        <h2>Salut, je suis El maliki salaheddine <br><span>Techncien Spécialise en automatisation </span></h2>
+        <h3>je fais des services pas cher</h3>
+        <a href="#projets" class="main-btn">Voir mes projets</a>
+        <div class="social-icons">
+          <a href="#"><i class="fab fa-linkedin"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+    </section>
 
   </body>
   </html>
