--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <h1><a href="a" class="log"> el maliki salaheddine </a></h1>
+      <a href="a" class="log"> EL MALIKI SALAHEDDINE</a>
       <nav class="navigation">
          <a href="#services">services</a>
          <a href="#projets">projets</a>
