--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <section class="main">
       <div>
-        <h2>Salut, je suis El maliki salaheddine <br><span>Techncien Spécialise en automatisation </span></h2>
+        <h2><p>Salut, je suis El maliki salaheddine <br><span>Techncien Spécialise en automatisation </p></span></h2>
         <h3>je fais des services pas cher</h3>
         <a href="#projets" class="main-btn">Voir mes projets</a>
         <div class="social-icons">
