--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div>
         <h2><pre>Salut, je suis El maliki salaheddine <br><span>Techncien Spécialise  <br> en automatisation </pre></span></h2>
         <h3>je fais des services pas cher</h3>
-        <a href="#projets" class="main-btn">Voir mes projets</a>
+        <a href="salah.html" class="main-btn">Voir mes projets</a>
         <div class="social-icons">
           <a href="#"><i class="fab fa-linkedin"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
