--- a/salah.html
+++ b/salah.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hhhh</h1>
+    <center>
+    <h1 style="color:blue;">Mes projets</h1>
+</center>
+
+    </Style>
+    <h1></h1>
 </body>
 </html>
