--- a/salah.html
+++ b/salah.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <center>
-    <h1 style="color:blue;">Mes projets</h1>
+    <h1 style="color:blue;">Mes projets</h1><br>Parcours scolaire <br>
+    <h2>baccalaureat science de vie et de la terre</h2> <br>
+    <h2>diplome Techncien spécialisé en automatisation instrumentation industriel </h2>
+
+
 </center>
 
     </Style>
